plugins {
	id 'java'
	id 'org.springframework.boot' version '3.5.7'
	id 'io.spring.dependency-management' version '1.1.7'
	id 'org.openapi.generator' version '7.17.0'
}

group = 'com.edutrack'
version = '0.0.1-SNAPSHOT'
description = 'edutrack API service'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(17)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jdbc'
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.springframework.boot:spring-boot-starter-data-redis'

	// 메일
	implementation 'org.springframework.boot:spring-boot-starter-mail'

	implementation 'org.springframework.boot:spring-boot-starter-validation'

	implementation 'io.github.cdimascio:java-dotenv:5.2.2'

	implementation 'software.amazon.awssdk:s3:2.20.0'
	implementation 'software.amazon.awssdk:auth:2.20.0'


	implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
	implementation 'io.jsonwebtoken:jjwt-impl:0.11.5'
	implementation 'io.jsonwebtoken:jjwt-jackson:0.11.5'
	compileOnly 'org.projectlombok:lombok'
    developmentOnly 'org.springframework.boot:spring-boot-devtools'
    runtimeOnly 'com.h2database:h2'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.security:spring-security-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

tasks.named('test') {
	useJUnitPlatform()
}

openApiGenerate {
    generatorName.set("spring")
    inputSpec.set("$rootDir/src/main/resources/openapi.yaml")
    outputDir.set("$buildDir/generated")

    apiPackage.set("com.edutrack.generated")
    modelPackage.set("com.edutrack.generated.model")
    invokerPackage.set("com.edutrack.generated.invoker")

    configOptions.set([
        interfaceOnly        : "true",
        useSpringBoot3       : "true",
        javaVersion          : "17",
        dateLibrary          : "java8",
        useTags              : "true",
        useBeanValidation    : "true",
        performBeanValidation: "true",
        serializableModel    : "true",
        openApiNullable      : "true"
    ])
}
